Crear entidad Traspaso

--- a/ANTEntidades.csproj
+++ b/ANTEntidades.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entidades\Auxiliares\RangoFecha.cs" />
+    <Compile Include="Entidades\Facturacion\Traspaso.cs" />
     <Compile Include="Entidades\Maestros\Acreedor.cs" />
     <Compile Include="Entidades\Facturacion\Averia.cs" />
     <Compile Include="Entidades\BD\Campo.cs" />
