--- a/ANTEntidades.csproj
+++ b/ANTEntidades.csproj
@@ -31,8 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ANTCommon">
-      <HintPath>\\server\DESARROLLO\SHARED\ANTCommon.dll</HintPath>
+    <Reference Include="ANTCommon, Version=1.0.0.0, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>\\server\DESARROLLO\SHARED\Common TEST\ANTCommon.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -45,14 +46,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entidades\AICA\Contrato.cs" />
+    <Compile Include="Entidades\AICA\Motivo.cs" />
+    <Compile Include="Entidades\Auxiliares\Contacto.cs" />
+    <Compile Include="Entidades\Auxiliares\Oferta.cs" />
     <Compile Include="Entidades\Auxiliares\RangoFecha.cs" />
+    <Compile Include="Entidades\Auxiliares\Tarifa.cs" />
     <Compile Include="Entidades\Facturacion\Traspaso.cs" />
     <Compile Include="Entidades\Maestros\Acreedor.cs" />
     <Compile Include="Entidades\Facturacion\Averia.cs" />
     <Compile Include="Entidades\BD\Campo.cs" />
     <Compile Include="Entidades\BD\Tabla.cs" />
     <Compile Include="Entidades\Auxiliares\Comprador.cs" />
-    <Compile Include="Entidades\Maestros\Confeccion.cs" />
     <Compile Include="Entidades\Auxiliares\ConfigLineasDoc.cs" />
     <Compile Include="Entidades\Auxiliares\Corredor.cs" />
     <Compile Include="Entidades\Auxiliares\Entidad.cs" />
@@ -64,6 +69,7 @@
     <Compile Include="Entidades\Auxiliares\Pais.cs" />
     <Compile Include="Entidades\Auxiliares\PlantillaLinea.cs" />
     <Compile Include="Entidades\Facturacion\Prevision.cs" />
+    <Compile Include="Entidades\Maestros\Confeccion.cs" />
     <Compile Include="Entidades\Maestros\MaestroBase.cs" />
     <Compile Include="Entidades\Maestros\Producto.cs" />
     <Compile Include="Entidades\Maestros\Proveedor.cs" />
