--- a/ANTEntidades.csproj
+++ b/ANTEntidades.csproj
@@ -31,6 +31,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="a3ERPActiveX">
+      <HintPath>\\server\DESARROLLO\SHARED\a3ERPActiveX.dll</HintPath>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
     <Reference Include="ANTCommon, Version=1.0.0.0, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>\\server\DESARROLLO\SHARED\Common TEST\ANTCommon.dll</HintPath>
@@ -49,6 +53,8 @@
     <Compile Include="Entidades\AICA\Contrato.cs" />
     <Compile Include="Entidades\AICA\Motivo.cs" />
     <Compile Include="Entidades\Auxiliares\Contacto.cs" />
+    <Compile Include="Entidades\Auxiliares\LineaDetalleParametros.cs" />
+    <Compile Include="Entidades\Auxiliares\LineaFactura.cs" />
     <Compile Include="Entidades\Auxiliares\Oferta.cs" />
     <Compile Include="Entidades\Auxiliares\RangoFecha.cs" />
     <Compile Include="Entidades\Auxiliares\Tarifa.cs" />
@@ -69,6 +75,7 @@
     <Compile Include="Entidades\Auxiliares\Pais.cs" />
     <Compile Include="Entidades\Auxiliares\PlantillaLinea.cs" />
     <Compile Include="Entidades\Facturacion\Prevision.cs" />
+    <Compile Include="Entidades\Maestros\Cliente.cs" />
     <Compile Include="Entidades\Maestros\Confeccion.cs" />
     <Compile Include="Entidades\Maestros\MaestroBase.cs" />
     <Compile Include="Entidades\Maestros\Producto.cs" />
