--- a/ANTEntidades.csproj
+++ b/ANTEntidades.csproj
@@ -33,12 +33,12 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="a3ERPActiveX">
-      <HintPath>\\server\DESARROLLO\SHARED\a3ERPActiveX.dll</HintPath>
+      <HintPath>..\..\SHARED\a3ERPActiveX.dll</HintPath>
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
-    <Reference Include="ANTCommon, Version=1.0.0.0, Culture=neutral, processorArchitecture=x86">
+    <Reference Include="ANTCommon, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>\\server\DESARROLLO\SHARED\Common TEST\ANTCommon.dll</HintPath>
+      <HintPath>..\..\SHARED\ANTCommon.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
