--- a/ANTEntidades.csproj
+++ b/ANTEntidades.csproj
@@ -90,4 +90,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>copy  "$(TargetDir)" "C:\SHARED\"</PostBuildEvent>
+  </PropertyGroup>
 </Project>
